--- a/index.html
+++ b/index.html
@@ -19,22 +19,21 @@
       rel="stylesheet"
     />
   </head>
-
   <body>
-    <header>
-      <div class="container">
-        <nav>
+    <header class="header">
+      <div class="header-container container">
+        <nav class="nav">
           <a href="./index.html" class="logo-main"
             >Web<span class="logo-part-header">Studio</span></a
           >
-          <ul>
+          <ul class="menu">
             <li><a href="./index.html" class="nav-link">Studio</a></li>
-            <li><a href="" class="nav-link">Portfolio</a></li>
-            <li><a href="" class="nav-link">Contacts</a></li>
+            <li><a href="#" class="nav-link">Portfolio</a></li>
+            <li><a href="#" class="nav-link">Contacts</a></li>
           </ul>
         </nav>
         <address class="contact-info">
-          <ul>
+          <ul class="contact-list">
             <li>
               <a href="mailto:info@devstudio.com" class="contact-link"
                 >info@devstudio.com</a
@@ -51,39 +50,39 @@
     </header>
 
     <main>
-      <section class="first-section">
+      <section class="first-section section">
         <div class="container">
-          <h1 class="header">Effective Solutions for Your Business</h1>
+          <h1 class="main-header">Effective Solutions for Your Business</h1>
           <button class="cta-button" type="button">Order Service</button>
         </div>
       </section>
 
-      <section>
+      <section class="features-section section">
         <div class="container">
           <h2 class="section-title">Features</h2>
-          <ul>
-            <li>
+          <ul class="features-list">
+            <li class="feature-item">
               <h3 class="feature-title">Strategy</h3>
               <p class="feature-description">
                 Our goal is to identify the business problem to walk away with
                 the perfect and creative solution.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="feature-title">Punctuality</h3>
               <p class="feature-description">
                 Bring the key message to the brand's audience for the best price
                 within the shortest possible time.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="feature-title">Diligence</h3>
               <p class="feature-description">
                 Research and confirm brands that present the strongest digital
                 growth opportunities and minimize risk.
               </p>
             </li>
-            <li>
+            <li class="feature-item">
               <h3 class="feature-title">Technologies</h3>
               <p class="feature-description">
                 Design practice focused on digital experiences. We bring forth a
@@ -94,10 +93,10 @@
         </div>
       </section>
 
-      <section class="team-section">
+      <section class="team-section section">
         <div class="container">
           <h2 class="section-title">Our Team</h2>
-          <ul>
+          <ul class="team-list">
             <li class="team-member">
               <img
                 src="./images/img1.jpg"
@@ -142,11 +141,11 @@
         </div>
       </section>
 
-      <section class="portfolio-section">
+      <section class="portfolio-section section">
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
-          <ul>
-            <li>
+          <ul class="portfolio-list">
+            <li class="portfolio-item">
               <img
                 src="./images/img5.jpg"
                 alt="Banking App"
@@ -156,7 +155,7 @@
               <h3 class="portfolio-title">Banking App</h3>
               <p class="portfolio-category">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img6.jpg"
                 alt="Cashless Payment"
@@ -166,7 +165,7 @@
               <h3 class="portfolio-title">Cashless Payment</h3>
               <p class="portfolio-category">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img7.jpg"
                 alt="Meditation App"
@@ -176,7 +175,7 @@
               <h3 class="portfolio-title">Meditation App</h3>
               <p class="portfolio-category">App</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img8.jpg"
                 alt="Taxi Service"
@@ -186,7 +185,7 @@
               <h3 class="portfolio-title">Taxi Service</h3>
               <p class="portfolio-category">Marketing</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img9.jpg"
                 alt="Screen Illustrations"
@@ -196,7 +195,7 @@
               <h3 class="portfolio-title">Screen Illustrations</h3>
               <p class="portfolio-category">Design</p>
             </li>
-            <li>
+            <li class="portfolio-item">
               <img
                 src="./images/img10.jpg"
                 alt="Online Courses"
