--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 
       <section class="features-section section">
         <div class="container">
-          <h2 class="section-title">Features</h2>
+          <h2 class="section-title visually-hidden">Features</h2>
           <ul class="features-list">
             <li class="feature-item">
               <h3 class="feature-title">Strategy</h3>
@@ -98,44 +98,52 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-member">
-              <img
-                src="./images/img1.jpg"
-                alt="Mark Guerrero"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-member-name">Mark Guerrero</h3>
-              <p class="team-member-role">Product Designer</p>
+              <div class="team-member-info">
+                <img
+                  src="./images/img1.jpg"
+                  alt="Mark Guerrero"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-member-name">Mark Guerrero</h3>
+                <p class="team-member-role">Product Designer</p>
+              </div>
             </li>
             <li class="team-member">
-              <img
-                src="./images/img2.jpg"
-                alt="Tom Ford"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-member-name">Tom Ford</h3>
-              <p class="team-member-role">Frontend Developer</p>
+              <div class="team-member-info">
+                <img
+                  src="./images/img2.jpg"
+                  alt="Tom Ford"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-member-name">Tom Ford</h3>
+                <p class="team-member-role">Frontend Developer</p>
+              </div>
             </li>
             <li class="team-member">
-              <img
-                src="./images/img3.jpg"
-                alt="Camila Garcia"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-member-name">Camila Garcia</h3>
-              <p class="team-member-role">Marketing</p>
+              <div class="team-member-info">
+                <img
+                  src="./images/img3.jpg"
+                  alt="Camila Garcia"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-member-name">Camila Garcia</h3>
+                <p class="team-member-role">Marketing</p>
+              </div>
             </li>
             <li class="team-member">
-              <img
-                src="./images/img4.jpg"
-                alt="Daniel Wilson"
-                width="264"
-                height="260"
-              />
-              <h3 class="team-member-name">Daniel Wilson</h3>
-              <p class="team-member-role">UI Designer</p>
+              <div class="team-member-info">
+                <img
+                  src="./images/img4.jpg"
+                  alt="Daniel Wilson"
+                  width="264"
+                  height="260"
+                />
+                <h3 class="team-member-name">Daniel Wilson</h3>
+                <p class="team-member-role">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
@@ -146,64 +154,76 @@
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
             <li class="portfolio-item">
-              <img
-                src="./images/img5.jpg"
-                alt="Banking App"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Banking App</h3>
-              <p class="portfolio-category">App</p>
+              <div class="portfolio-item-info">
+                <img
+                  src="./images/img5.jpg"
+                  alt="Banking App"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-title">Banking App</h3>
+                <p class="portfolio-category">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img6.jpg"
-                alt="Cashless Payment"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Cashless Payment</h3>
-              <p class="portfolio-category">Marketing</p>
+              <div class="portfolio-item-info">
+                <img
+                  src="./images/img6.jpg"
+                  alt="Cashless Payment"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-title">Cashless Payment</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img7.jpg"
-                alt="Meditation App"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Meditation App</h3>
-              <p class="portfolio-category">App</p>
+              <div class="portfolio-item-info">
+                <img
+                  src="./images/img7.jpg"
+                  alt="Meditation App"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-title">Meditation App</h3>
+                <p class="portfolio-category">App</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img8.jpg"
-                alt="Taxi Service"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Taxi Service</h3>
-              <p class="portfolio-category">Marketing</p>
+              <div class="portfolio-item-info">
+                <img
+                  src="./images/img8.jpg"
+                  alt="Taxi Service"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-title">Taxi Service</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img9.jpg"
-                alt="Screen Illustrations"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Screen Illustrations</h3>
-              <p class="portfolio-category">Design</p>
+              <div class="portfolio-item-info">
+                <img
+                  src="./images/img9.jpg"
+                  alt="Screen Illustrations"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-title">Screen Illustrations</h3>
+                <p class="portfolio-category">Design</p>
+              </div>
             </li>
             <li class="portfolio-item">
-              <img
-                src="./images/img10.jpg"
-                alt="Online Courses"
-                width="360"
-                height="300"
-              />
-              <h3 class="portfolio-title">Online Courses</h3>
-              <p class="portfolio-category">Marketing</p>
+              <div class="portfolio-item-info">
+                <img
+                  src="./images/img10.jpg"
+                  alt="Online Courses"
+                  width="360"
+                  height="300"
+                />
+                <h3 class="portfolio-title">Online Courses</h3>
+                <p class="portfolio-category">Marketing</p>
+              </div>
             </li>
           </ul>
         </div>
