--- a/index.html
+++ b/index.html
@@ -98,51 +98,51 @@
           <h2 class="section-title">Our Team</h2>
           <ul class="team-list">
             <li class="team-member">
-              <div class="team-member-info">
-                <img
-                  src="./images/img1.jpg"
-                  alt="Mark Guerrero"
-                  width="264"
-                  height="260"
-                />
-                <h3 class="team-member-name">Mark Guerrero</h3>
-                <p class="team-member-role">Product Designer</p>
+              <img
+                src="./images/img1.jpg"
+                alt="Mark Guerrero"
+                width="264"
+                height="260"
+              />
+              <div class="team-member-info team-padding">
+                <h3 class="team-member-name team-center">Mark Guerrero</h3>
+                <p class="team-member-role team-center">Product Designer</p>
               </div>
             </li>
             <li class="team-member">
-              <div class="team-member-info">
-                <img
-                  src="./images/img2.jpg"
-                  alt="Tom Ford"
-                  width="264"
-                  height="260"
-                />
-                <h3 class="team-member-name">Tom Ford</h3>
-                <p class="team-member-role">Frontend Developer</p>
+              <img
+                src="./images/img2.jpg"
+                alt="Tom Ford"
+                width="264"
+                height="260"
+              />
+              <div class="team-member-info team-padding">
+                <h3 class="team-member-name team-center">Tom Ford</h3>
+                <p class="team-member-role team-center">Frontend Developer</p>
               </div>
             </li>
             <li class="team-member">
-              <div class="team-member-info">
-                <img
-                  src="./images/img3.jpg"
-                  alt="Camila Garcia"
-                  width="264"
-                  height="260"
-                />
-                <h3 class="team-member-name">Camila Garcia</h3>
-                <p class="team-member-role">Marketing</p>
+              <img
+                src="./images/img3.jpg"
+                alt="Camila Garcia"
+                width="264"
+                height="260"
+              />
+              <div class="team-member-info team-padding">
+                <h3 class="team-member-name team-center">Camila Garcia</h3>
+                <p class="team-member-role team-center">Marketing</p>
               </div>
             </li>
             <li class="team-member">
-              <div class="team-member-info">
-                <img
-                  src="./images/img4.jpg"
-                  alt="Daniel Wilson"
-                  width="264"
-                  height="260"
-                />
-                <h3 class="team-member-name">Daniel Wilson</h3>
-                <p class="team-member-role">UI Designer</p>
+              <img
+                src="./images/img4.jpg"
+                alt="Daniel Wilson"
+                width="264"
+                height="260"
+              />
+              <div class="team-member-info team-padding">
+                <h3 class="team-member-name team-center">Daniel Wilson</h3>
+                <p class="team-member-role team-center">UI Designer</p>
               </div>
             </li>
           </ul>
@@ -153,75 +153,79 @@
         <div class="container">
           <h2 class="section-title">Our Portfolio</h2>
           <ul class="portfolio-list">
-            <li class="portfolio-item">
-              <div class="portfolio-item-info">
-                <img
-                  src="./images/img5.jpg"
-                  alt="Banking App"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-title">Banking App</h3>
+            <li class="portfolio-item portfolio-width">
+              <img
+                src="./images/img5.jpg"
+                alt="Banking App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-info portfolio-padding">
+                <h3 class="portfolio-title portfolio-margin">Banking App</h3>
                 <p class="portfolio-category">App</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <div class="portfolio-item-info">
-                <img
-                  src="./images/img6.jpg"
-                  alt="Cashless Payment"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-title">Cashless Payment</h3>
+            <li class="portfolio-item portfolio-width">
+              <img
+                src="./images/img6.jpg"
+                alt="Cashless Payment"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-info portfolio-padding">
+                <h3 class="portfolio-title portfolio-margin">
+                  Cashless Payment
+                </h3>
                 <p class="portfolio-category">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <div class="portfolio-item-info">
-                <img
-                  src="./images/img7.jpg"
-                  alt="Meditation App"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-title">Meditation App</h3>
+            <li class="portfolio-item portfolio-width">
+              <img
+                src="./images/img7.jpg"
+                alt="Meditation App"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-info portfolio-padding">
+                <h3 class="portfolio-title portfolio-margin">Meditation App</h3>
                 <p class="portfolio-category">App</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <div class="portfolio-item-info">
-                <img
-                  src="./images/img8.jpg"
-                  alt="Taxi Service"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-title">Taxi Service</h3>
+            <li class="portfolio-item portfolio-width">
+              <img
+                src="./images/img8.jpg"
+                alt="Taxi Service"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-info portfolio-padding">
+                <h3 class="portfolio-title portfolio-margin">Taxi Service</h3>
                 <p class="portfolio-category">Marketing</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <div class="portfolio-item-info">
-                <img
-                  src="./images/img9.jpg"
-                  alt="Screen Illustrations"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-title">Screen Illustrations</h3>
+            <li class="portfolio-item portfolio-width">
+              <img
+                src="./images/img9.jpg"
+                alt="Screen Illustrations"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-info portfolio-padding">
+                <h3 class="portfolio-title portfolio-margin">
+                  Screen Illustrations
+                </h3>
                 <p class="portfolio-category">Design</p>
               </div>
             </li>
-            <li class="portfolio-item">
-              <div class="portfolio-item-info">
-                <img
-                  src="./images/img10.jpg"
-                  alt="Online Courses"
-                  width="360"
-                  height="300"
-                />
-                <h3 class="portfolio-title">Online Courses</h3>
+            <li class="portfolio-item portfolio-width">
+              <img
+                src="./images/img10.jpg"
+                alt="Online Courses"
+                width="360"
+                height="300"
+              />
+              <div class="portfolio-item-info portfolio-padding">
+                <h3 class="portfolio-title portfolio-margin">Online Courses</h3>
                 <p class="portfolio-category">Marketing</p>
               </div>
             </li>
