--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
     <footer class="footer">
       <div class="container">
-        <a href="./index.html" class="logo-main"
+        <a href="./index.html" class="logo-main logo-main-footer"
           >Web<span class="logo-part-footer">Studio</span></a
         >
         <p class="footer-text">
